src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "':='", "','", "';'", "':'", "'='", "'<>'", 
                     "'<'", "'<='", "'>'", "'>='", "'['", "']'", "'('", 
                     "')'", "'{'", "'}'", "'..'" ]

    symbolicNames = [ "<INVALID>", "AND", "ARRAY", "BEGIN", "BOOLEAN", "BREAK", 
                      "CONTINUE", "DIV", "DO", "DOWNTO", "ELSE", "END", 
                      "FALSE", "FOR", "FUNCTION", "IF", "INTEGER", "MOD", 
                      "NOT", "OF", "OR", "PROCEDURE", "REAL", "RETURN", 
                      "STRING", "THEN", "TO", "TRUE", "VAR", "WHILE", "WITH", 
                      "ADD", "SUB", "MUL", "SLASH", "ASSIGN", "COMMA", "SEMI", 
                      "COLON", "EQUAL", "NOTEQUAL", "LT", "LE", "GT", "GE", 
                      "LB", "RB", "LP", "RP", "LC", "RC", "DOTDOT", "WHITESPACE", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "ID", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_vargroup = 3
    RULE_idlist = 4
    RULE_idtype = 5
    RULE_primtype = 6
    RULE_arraytype = 7
    RULE_signedInt = 8
    RULE_funcdecl = 9
    RULE_plist = 10
    RULE_pgroup = 11
    RULE_procdecl = 12
    RULE_body = 13
    RULE_stmt = 14
    RULE_cpstmt = 15
    RULE_assign = 16
    RULE_variable = 17
    RULE_ifstmt = 18
    RULE_whilestmt = 19
    RULE_forstmt = 20
    RULE_breakstmt = 21
    RULE_continuestmt = 22
    RULE_returnstmt = 23
    RULE_withstmt = 24
    RULE_callstmt = 25
    RULE_expr = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_op = 33
    RULE_funcall = 34
    RULE_arraycell = 35
    RULE_boollit = 36

    ruleNames =  [ "program", "decl", "vardecl", "vargroup", "idlist", "idtype", 
                   "primtype", "arraytype", "signedInt", "funcdecl", "plist", 
                   "pgroup", "procdecl", "body", "stmt", "cpstmt", "assign", 
                   "variable", "ifstmt", "whilestmt", "forstmt", "breakstmt", 
                   "continuestmt", "returnstmt", "withstmt", "callstmt", 
                   "expr", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "op", "funcall", "arraycell", "boollit" ]

    EOF = Token.EOF
    AND=1
    ARRAY=2
    BEGIN=3
    BOOLEAN=4
    BREAK=5
    CONTINUE=6
    DIV=7
    DO=8
    DOWNTO=9
    ELSE=10
    END=11
    FALSE=12
    FOR=13
    FUNCTION=14
    IF=15
    INTEGER=16
    MOD=17
    NOT=18
    OF=19
    OR=20
    PROCEDURE=21
    REAL=22
    RETURN=23
    STRING=24
    THEN=25
    TO=26
    TRUE=27
    VAR=28
    WHILE=29
    WITH=30
    ADD=31
    SUB=32
    MUL=33
    SLASH=34
    ASSIGN=35
    COMMA=36
    SEMI=37
    COLON=38
    EQUAL=39
    NOTEQUAL=40
    LT=41
    LE=42
    GT=43
    GE=44
    LB=45
    RB=46
    LP=47
    RP=48
    LC=49
    RC=50
    DOTDOT=51
    WHITESPACE=52
    BLOCK_COMMENT=53
    LINE_COMMENT=54
    ID=55
    INTLIT=56
    FLOATLIT=57
    STRINGLIT=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.decl()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 79
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MPParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MPParser.FuncdeclContext,0)


        def procdecl(self):
            return self.getTypedRuleContext(MPParser.ProcdeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.vardecl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.funcdecl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.procdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def vargroup(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VargroupContext)
            else:
                return self.getTypedRuleContext(MPParser.VargroupContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MPParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MPParser.VAR)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.vargroup()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VargroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MPParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def idtype(self):
            return self.getTypedRuleContext(MPParser.IdtypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_vargroup

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVargroup" ):
                return visitor.visitVargroup(self)
            else:
                return visitor.visitChildren(self)




    def vargroup(self):

        localctx = MPParser.VargroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vargroup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.idlist()
            self.state = 93
            self.match(MPParser.COLON)
            self.state = 94
            self.idtype()
            self.state = 95
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MPParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MPParser.ID)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 98
                self.match(MPParser.COMMA)
                self.state = 99
                self.match(MPParser.ID)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MPParser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_idtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdtype" ):
                return visitor.visitIdtype(self)
            else:
                return visitor.visitChildren(self)




    def idtype(self):

        localctx = MPParser.IdtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idtype)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.BOOLEAN, MPParser.INTEGER, MPParser.REAL, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.primtype()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimtype" ):
                return visitor.visitPrimtype(self)
            else:
                return visitor.visitChildren(self)




    def primtype(self):

        localctx = MPParser.PrimtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.REAL) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def signedInt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.SignedIntContext)
            else:
                return self.getTypedRuleContext(MPParser.SignedIntContext,i)


        def DOTDOT(self):
            return self.getToken(MPParser.DOTDOT, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primtype(self):
            return self.getTypedRuleContext(MPParser.PrimtypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_arraytype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytype" ):
                return visitor.visitArraytype(self)
            else:
                return visitor.visitChildren(self)




    def arraytype(self):

        localctx = MPParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arraytype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(MPParser.ARRAY)
            self.state = 112
            self.match(MPParser.LB)
            self.state = 113
            self.signedInt()
            self.state = 114
            self.match(MPParser.DOTDOT)
            self.state = 115
            self.signedInt()
            self.state = 116
            self.match(MPParser.RB)
            self.state = 117
            self.match(MPParser.OF)
            self.state = 118
            self.primtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignedIntContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_signedInt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedInt" ):
                return visitor.visitSignedInt(self)
            else:
                return visitor.visitChildren(self)




    def signedInt(self):

        localctx = MPParser.SignedIntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_signedInt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 120
                self.match(MPParser.SUB)


            self.state = 123
            self.match(MPParser.INTLIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def idtype(self):
            return self.getTypedRuleContext(MPParser.IdtypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def plist(self):
            return self.getTypedRuleContext(MPParser.PlistContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MPParser.VardeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MPParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MPParser.FUNCTION)
            self.state = 126
            self.match(MPParser.ID)
            self.state = 127
            self.match(MPParser.LP)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 128
                self.plist()


            self.state = 131
            self.match(MPParser.RP)
            self.state = 132
            self.match(MPParser.COLON)
            self.state = 133
            self.idtype()
            self.state = 134
            self.match(MPParser.SEMI)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 135
                self.vardecl()


            self.state = 138
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pgroup(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.PgroupContext)
            else:
                return self.getTypedRuleContext(MPParser.PgroupContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_plist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlist" ):
                return visitor.visitPlist(self)
            else:
                return visitor.visitChildren(self)




    def plist(self):

        localctx = MPParser.PlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_plist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.pgroup()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.SEMI:
                self.state = 141
                self.match(MPParser.SEMI)
                self.state = 142
                self.pgroup()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PgroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MPParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def idtype(self):
            return self.getTypedRuleContext(MPParser.IdtypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_pgroup

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPgroup" ):
                return visitor.visitPgroup(self)
            else:
                return visitor.visitChildren(self)




    def pgroup(self):

        localctx = MPParser.PgroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pgroup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.idlist()
            self.state = 149
            self.match(MPParser.COLON)
            self.state = 150
            self.idtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def plist(self):
            return self.getTypedRuleContext(MPParser.PlistContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MPParser.VardeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcdecl" ):
                return visitor.visitProcdecl(self)
            else:
                return visitor.visitChildren(self)




    def procdecl(self):

        localctx = MPParser.ProcdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_procdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(MPParser.PROCEDURE)
            self.state = 153
            self.match(MPParser.ID)
            self.state = 154
            self.match(MPParser.LP)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 155
                self.plist()


            self.state = 158
            self.match(MPParser.RP)
            self.state = 159
            self.match(MPParser.SEMI)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 160
                self.vardecl()


            self.state = 163
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StmtContext)
            else:
                return self.getTypedRuleContext(MPParser.StmtContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):
